Fixed player monster bar not aligned on bigger screens

--- a/src/pages/Battle/styles.scss
+++ b/src/pages/Battle/styles.scss
@@ -98,7 +98,6 @@ $battleButtonCenterSize: 30px;
 
         .player-monster-bar {
             position: relative;
-            width: 50vw;
             margin: 10px auto;
 
             display: flex;
